--- a/.gitignore
+++ b/.gitignore
@@ -68,3 +68,7 @@ fastlane/report.xml
 fastlane/Preview.html
 fastlane/screenshots/**/*.png
 fastlane/test_output
+
+# Claude / AI assistant files
+CLAUDE.md
+.cursor/
