Simplify documentation and add comprehensive tests
- Remove verbose AI-generated doc comment patterns
- Add unit tests for SuggestionsService, Suggestion, SongInfo, SortOption, QueueBehavior, and LibraryStats (90 tests total)
- Add accessibility identifiers for UI testing
- Add StorageKeys for centralized UserDefaults keys
- Delete README and unused ContentView
- Fix test plan configuration

--- a/.gitignore
+++ b/.gitignore
@@ -73,3 +73,8 @@ fastlane/test_output
 .cursor/
 CLAUDE.md
 .github/copilot-instructions.md
+
+# Skill directories
+code-review-excellence/
+docs-write/
+frontend-design/
